--- a/BLOG/Views/Home/Index.cshtml
+++ b/BLOG/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 
 @{
-    ViewBag.Title = "BLOG首页";
+    ViewBag.Title = "BLOG首页1";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using Model;
