--- a/BLOG/Views/Admin/EditBlog.cshtml
+++ b/BLOG/Views/Admin/EditBlog.cshtml
@@ -41,11 +41,11 @@
         BlogInfo blog = (BlogInfo)ViewData["blog"];
         <div class="form-group">
             <label for="exampleInputEmail1">标题</label>
-            <input type="text" name="Title" class="form-control" placeholder="标题" value="@blog.Title"  />
+            <input type="text" name="Title" style="max-width:600%;" class="form-control" placeholder="标题" value="@blog.Title"  />
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">内容</label>
-            <textarea class="form-control" id="content1" rows="8" name="Content" placeholder="内容" style="width:700px;height:200px;visibility:hidden;">@blog.Content</textarea>
+            <textarea class="form-control" id="content1" rows="8" name="Content" placeholder="内容" style="width:100%;height:400px;visibility:hidden;">@blog.Content</textarea>
         </div>
         <input type="hidden" name="Id" value="@blog.Id" />
         <button type="submit" class="btn btn-default">修改</button>
