--- a/BLOG/Views/Admin/Index.cshtml
+++ b/BLOG/Views/Admin/Index.cshtml
@@ -36,11 +36,11 @@
 <form role="form" method="post" action="~/Admin/AddBlog">
     <div class="form-group">
         <label for="exampleInputEmail1">标题</label>
-        <input type="text" name="Title" class="form-control" placeholder="标题">
+        <input type="text" style="max-width:600%;" name="Title" class="form-control" placeholder="标题">
     </div>
     <div class="form-group">
         <label for="exampleInputPassword1">内容</label>
-        <textarea class="form-control" id="content1" rows="8" name="Content" placeholder="内容" style="width:700px;height:200px;visibility:hidden;"></textarea>
+        <textarea class="form-control" id="content1" rows="8" name="Content" placeholder="内容" style="width:100%;height:400px;visibility:hidden;"></textarea>
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
