--- a/BLOG/Views/Shared/_LoginPartial.cshtml
+++ b/BLOG/Views/Shared/_LoginPartial.cshtml
@@ -5,6 +5,6 @@
         </div>
         <button type="submit" class="btn btn-default">搜索</button>
     </form>
-    <li>@Html.ActionLink("注册", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-    <li>@Html.ActionLink("登录", "Index", "Login", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+    @*<li>@Html.ActionLink("注册", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>*@
+    @*<li>@Html.ActionLink("登录", "Index", "Login", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>*@
 </ul>
