--- a/BLOG/Views/Home/Index.cshtml
+++ b/BLOG/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                @Html.Raw(blogInfo.Content)
             </p>
             <p>@blogInfo.CreatedTime.ToShortDateString()</p>
-            <p><a class="btn btn-default" href="/Blog/Index?blogId=@blogInfo.Id">More &raquo;</a></p>
+            <p><a class="btn btn-default" href="/Blog/Index/@blogInfo.Id">More &raquo;</a></p>
             @*<p>@Html.ActionLink("详细","Blog","Index",routeValues:null,htmlAttributes:new { Id=blogInfo.Id })</p>*@
         </div>
     }
