--- a/BLOG/Views/Blog/Index.cshtml
+++ b/BLOG/Views/Blog/Index.cshtml
@@ -69,8 +69,11 @@
     BlogInfo blog = (BlogInfo)ViewData["blog"];
     <h2>@blog.Title</h2>
     <p>@Html.Raw(@blog.Content)</p>
-    <p>@blog.CreatedTime.ToLongDateString()</p>
-    <p><a class="btn btn-default" href="/Admin/EditBlog?Id=@blog.Id">修改 &raquo;</a><a class="btn btn-default" href="/Admin/DeleteBlog?Id=@blog.Id" >删除 &raquo;</a></p>
+    <p>发于：@blog.CreatedTime.ToLongDateString()</p>
+    if(Session["user"] != null)
+    {
+        <p><a class="btn btn-default" href="/Admin/EditBlog?Id=@blog.Id">修改 &raquo;</a><a class="btn btn-default" href="/Admin/DeleteBlog?Id=@blog.Id">删除 &raquo;</a></p>
+    }
 
     if (ViewData["listComment"] != null)
     {
@@ -103,8 +106,8 @@
             <input type="text" name="UserName" id="UserName" class="form-control" placeholder="姓名">
         </div>
         <div class="form-group">
-            <label for="lableforcommont">内容</label>
-            <textarea class="form-control" id="mycontent" rows="6" name="Comment" placeholder="内容"></textarea>
+            <label for="lableforcommont">留言</label>
+            <textarea class="form-control" id="mycontent" rows="6" name="Comment" placeholder="请您留言..."></textarea>
         </div>
         <input type="hidden" name="BlogId" id="BlogId" value="@blog.Id" />
         @*<button type="submit" name="commentAdd" id="commentAddbtn" class="btn btn-default">提交</button>  草:实现异步,类型不用是submit!*@
