--- a/BLOG/Views/Home/Index.cshtml
+++ b/BLOG/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     @foreach (BlogInfo blogInfo in (List<BlogInfo>)ViewData["list"])
     {
         <div class="col-md-12">
-            <h2>@blogInfo.Title</h2>
+            <h4><a href="/Blog/Index/@blogInfo.Id"><b>@blogInfo.Title</b></a></h4>
             <p>
                @Html.Raw(blogInfo.Content)
             </p>
