--- a/BLOG/Views/Shared/_Layout.cshtml
+++ b/BLOG/Views/Shared/_Layout.cshtml
@@ -23,14 +23,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("ZBHBlog首页", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("ZBHBlog首页", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "color:white" })
             </div> 
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("目录", "List", "Home",new { area = "",id = "1" },new { @class = "navbar-brand" })</li>
-                    <li>@Html.ActionLink("写作", "Index", "Admin",null, new { @class = "navbar-brand" })</li>
+                    <li>@Html.ActionLink("目录", "List", "Home",new { area = "",id = "1" },new { @class = "navbar-brand", @style = "color:white" })</li>
+                    <li>@Html.ActionLink("写作", "Index", "Admin",null, new { @class = "navbar-brand", @style = "color:white" })</li>
+                    @if (Session["user"] == null)
+                    {
+                        <li>@Html.ActionLink("登陆", "Index", "Login", null, new { @class = "navbar-brand", @style = "color:white" })</li>
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("退出", "LoginOut", "Login", null, new { @class = "navbar-brand", @style = "color:white" })</li>
+                    }
 
-                    <li>@Html.ActionLink("登陆", "Index", "Login", null, new { @class = "navbar-brand" })</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
