--- a/BLOG/Views/Shared/_Layout.cshtml
+++ b/BLOG/Views/Shared/_Layout.cshtml
@@ -15,34 +15,34 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" >
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("U9Blog", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "color:white" })
-            </div> 
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("目录", "List", "Home",new { area = "",id = "1" },new { @class = "navbar-brand", @style = "color:white" })</li>
-                    <li>@Html.ActionLink("评论", "List", "Home", new { area = "", id = "1" }, new { @class = "navbar-brand", @style = "color:white" })</li>
-                    <li>@Html.ActionLink("写作", "Index", "Admin",null, new { @class = "navbar-brand", @style = "color:white" })</li>
-                    @if (Session["user"] == null)
-                    {
-                        <li>@Html.ActionLink("登陆", "Index", "Login", null, new { @class = "navbar-brand", @style = "color:white" })</li>
-                    }
-                    else
-                    {
-                        <li>@Html.ActionLink("退出", "LoginOut", "Login", null, new { @class = "navbar-brand", @style = "color:white" })</li>
-                    }
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("U9Blog", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "color:white" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("目录", "List", "Home", new { area = "", id = "1" }, new { @class = "navbar-brand", @style = "color:white" })</li>
+                        <li>@Html.ActionLink("评论", "Index", "Comment", new { area = "", id = "1" }, new { @class = "navbar-brand", @style = "color:white" })</li>
+                        <li>@Html.ActionLink("写作", "Index", "Admin", null, new { @class = "navbar-brand", @style = "color:white" })</li>
+                        @if (Session["user"] == null)
+                        {
+                            <li>@Html.ActionLink("登陆", "Index", "Login", null, new { @class = "navbar-brand", @style = "color:white" })</li>
+                        }
+                        else
+                        {
+                            <li>@Html.ActionLink("退出", "LoginOut", "Login", null, new { @class = "navbar-brand", @style = "color:white" })</li>
+                        }
 
-                </ul>
-                @Html.Partial("_LoginPartial")
+                    </ul>
+                    @Html.Partial("_LoginPartial")
+                </div>
             </div>
-        </div>
     </div>
     <div class="container body-content">
         @RenderBody()
