--- a/BLOG/Views/Blog/Index.cshtml
+++ b/BLOG/Views/Blog/Index.cshtml
@@ -7,6 +7,7 @@
 <script>
     $(function () {
         commentAddClick();
+        DbgAddbtn();
         commantDellClick();
     })
     function commentAddClick() {
@@ -21,11 +22,11 @@
                 success: function (data) {
                     var serverData = data.split(':');
                     if (serverData[0] == "ok") {
-                        $("#NewComment").append(serverData[1] + "<br/>");
+                        $("#DbgLable").append(serverData[1] + "<br/>");
                         $("#result").css("display", "block");
                         $("#mycontent").val('');
                     } else {
-                        alert('填写评论错误');
+                        alert('Dbg出错');
                     }
                 },
                 error: function (data) {
@@ -34,6 +35,29 @@
             });//jquery.form.js -->myajaxform.js
         });
     }
+
+    function DbgAddbtn() {
+        $("#commentDbgAddbtn").click(function () {
+
+            $("#form2").ajaxSubmit({
+                type: "post",
+                url: "/Blog/DbgAdd",
+                success: function (data) {
+                    var serverData = data.split(':');
+                    if (serverData[0] == "调用栈") {
+                        $("#DbgLable").append(serverData[1] + "<br/>");
+                        $("#dbgresult").css("display", "block");
+                    } else {
+                        alert('获取调用栈出错。');
+                    }
+                },
+                error: function (data) {
+                    alert(data);
+                }
+            });//jquery.form.js -->myajaxform.js
+        });
+    }
+
     function commantDellClick() {
         $('a[name = "ayibu"]').click(function (e) {
             e.preventDefault();//阻塞默认事件(a 不会在执行href事件了)
@@ -47,7 +71,7 @@
                 $('#dresult').css("display", "block");
                 //$(this).unbind();
             });
-          //  sleep(1000);
+            //  sleep(1000);
             return false;
         })
     }
@@ -60,7 +84,7 @@
     //            alert(data);
     //            //$(this).unbind();
     //        });
-           
+
     //    })
     //}
 
@@ -72,7 +96,7 @@
     <h2>@blog.Title</h2>
     <p>@Html.Raw(@blog.Content)</p>
     <p>发布于：@blog.CreatedTime.ToLongDateString()</p>
-    if(Session["user"] != null)
+    if (Session["user"] != null)
     {
         <p><a class="btn btn-default" href="~/Admin/EditBlog?Id=@blog.BlogId">修改 &raquo;</a><a class="btn btn-default" href="~/Admin/DeleteBlog?Id=@blog.BlogId">删除 &raquo;</a></p>
     }
@@ -82,12 +106,14 @@
         <h3>评论列表</h3>
         foreach (CommentInfo commentInfo in (List<CommentInfo>)ViewData["listComment"])
         {
-            <p>@commentInfo.UserName： @commentInfo.Comment 时间：@commentInfo.CreatedTime.ToShortDateString() 
-            @if (Session["user"] != null)
-            {
-                <a name="ayibu" title="@commentInfo.CommentId.ToString()" href="~/Admin/DeleteComment?CommentId=@commentInfo.CommentId">【删除】</a>
-                @*<span name="ayibu" title="~/Admin/DeleteComment?CommentId=@commentInfo.Id">[删除]</span>*@
-            } </p> @*a标签实现异步*@
+            <p>
+                @commentInfo.UserName： @commentInfo.Comment 时间：@commentInfo.CreatedTime.ToShortDateString()
+                @if (Session["user"] != null)
+                {
+                    <a name="ayibu" title="@commentInfo.CommentId.ToString()" href="~/Admin/DeleteComment?CommentId=@commentInfo.CommentId">【删除】</a>
+                    @*<span name="ayibu" title="~/Admin/DeleteComment?CommentId=@commentInfo.Id">[删除]</span>*@
+                }
+            </p> @*a标签实现异步*@
         }
     }
     <p id="NewComment"></p>
@@ -115,4 +141,18 @@
         @*<button type="submit" name="commentAdd" id="commentAddbtn" class="btn btn-default">提交</button>  草:实现异步,类型不用是submit!*@
         <button type="button" name="commentAdd" id="commentAddbtn" class="btn btn-default">提交</button>
     }
+
+
+    using (Ajax.BeginForm("DbgAdd", "Blog", null, new AjaxOptions() { HttpMethod = "post", OnSuccess = "afterAdd" }, new { id = "form2" }))
+    {
+
+        <button type="button" name="commentDbgAdd" id="commentDbgAddbtn" class="btn btn-default">DbgAdd</button>
+        <div id="dbgresult" class="alert alert-dismissable alert-warning" style="max-width:280px; display:none;">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            <i class="glyphicon glyphicon-warning-sign">获取调用栈成功</i>
+        </div>
+        <p id="DbgLable"></p>
+
+    }
+
 }
